2006-12-08  Paul Eggert  <eggert@cs.ucla.edu>

	* .cvsignore: Add .deps, gzexe, gzip, zdiff, zforce, zgrep,
	zless, zmore, znew.
	* doc/.cvsignore: Add Makefile.
	* lib/.cvsignore: Add .deps, Makefile, alloca.h, config.h, fcntl.h,
	stamp-h1, stdint.h, sys.

	* configure.ac (for assembler): Set ASFLAGS_config to
	-Wa,--noexecstack if this seems advisable on this platform.
	Problem reported by Mike Frysinger in
	<http://lists.gnu.org/archive/html/bug-gzip/2006-12/msg00018.html>.
	* lib/Makefile.am (match.$(OBJEXT)): Use ASFLAGS_config.

2006-12-07  Paul Eggert  <eggert@cs.ucla.edu>

	* Makefile.am (install-exec-hook): Fix bug when installing
	symbolic links as aliases.  Problem reported by Mike Frysinger.

	* deflate.c (deflate_fast, deflate): Avoid core dump.  Problem
	originally reported by Jochen Friedrich and trivial patch supplied
	by Anthony Towns; see <http://bugs.debian.org/184057>.

2006-12-06  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS, configure.ac (AC_INIT):
	Version 1.3.7 released.

2006-12-06  Bruno Haible  <bruno@clisp.org>  (tiny change)
	and Paul Eggert  <eggert@cs.ucla.edu>

	Fix build failure on case-insensitive file systems.
	* configure.ac: Use match_.s instead of _match.s.
	* Makefile.am (MOSTLYCLEANFILES): Likewise.
	* lib/Makefile.am (match.$(OBJEXT)): Likewise.
	(MOSTLYCLEANFILES): Likewise.

2006-12-06  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: Document the fixes below.
	* configure.ac (AC_CHECK_FUNCS_ONCE): Add siginterrupt.
	* gzip.c (lstat) [!defined(HAVE_LSTAT) && !defined(lstat)]: Remove.
	(SA_NOCLDSTOP, sigprocmask, sigset_t) [!defined SA_NOCLDSTOP]:
	New macros.
	(siginterrupt) [!defined SA_NOCLDSTOP && ! HAVE_SIGINTERRUPT]:
	New macro.
	(HAVE_WORKING_O_NOFOLLOW): Define to 0 if not defined.
	(caught_signals, exiting_signal, remove_ofname_fd): New vars.
	(remove_ofname): Remove; all uses changed to remove_ofname_fd.
	(same_file, name_too_long): Remove.
	(install_signal_handlers): New function.  It prefers sigaction,