@@ -291,7 +291,7 @@ With @samp{--verbose}, the size totals and compression ratio for all files
 is also displayed, unless some sizes are unknown. With @samp{--quiet},
 the title and totals lines are not displayed.
 
-The @code{gzip} format represents the the input size modulo
+The @code{gzip} format represents the input size modulo
 @math{2^32}, so the uncompressed size and compression ratio are listed
 incorrectly for uncompressed files 4 GB and larger. To work around
 this problem, you can use the following command to discover a large
