@@ -74,8 +74,7 @@ Try \`$0 --help' for more information."
 fi
 
 tmp=
-trap '
-  res=$?
+trap 'res=$?
   test -n "$tmp" && rm -f "$tmp"
   (exit $res); exit $res
 ' 0 1 2 3 5 10 13 15
@@ -145,8 +144,7 @@ umask=`umask`
 umask 77
 
 gztmpdir=
-trap '
-  res=$?
+trap 'res=$?
   test -n "$gztmpdir" && rm -fr "$gztmpdir"
   (exit $res); exit $res
 ' 0 1 2 3 5 10 13 15
