@@ -473,7 +473,7 @@ GNU tar. Make sure that the same block size (-b option of tar) is used
 for reading and writing compressed data on tapes.  (This example
 assumes you are using the GNU version of tar.)
 .SH BUGS
-The gzip format represents the the input size modulo 2^32, so the
+The gzip format represents the input size modulo 2^32, so the
 --list option reports incorrect uncompressed sizes and compression
 ratios for uncompressed files 4 GB and larger.  To work around this
 problem, you can use the following command to discover a large
